--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
         #box9 {
             background-position-x: -10px;
             height: 20vh;
-            background-image: url('assets/images/rvbg.png');
+            background-image: url('rvbg.png');
             background-size: cover;
         }
 
         #box11 {
             height: 15vh;
             text-align: center;
-            background-image: url('assets/images/bottom.png');
+            background-image: url('bottom.png');
             background-size: cover;
         }
 
@@ -165,7 +165,7 @@
             margin-left: 5vw;
             margin-right: 5vw;
             text-align: center;
-            background-image: url('assets/images/regbg.jfif');
+            background-image: url('regbg.jfif');
             background-size: cover;
             background-position: center bottom;
         }
@@ -381,7 +381,7 @@
                 margin-left: 17.5vw;
                 margin-right: 17.5vw;
                 text-align: center;
-                background-image: url('assets/images/regbg.jfif');
+                background-image: url('regbg.jfif');
                 background-size: cover;
                 background-position: center bottom;
             }
@@ -403,7 +403,7 @@
             }
 
             #box9 {
-                background-image: url('assets/images/rvbg.png');
+                background-image: url('rvbg.png');
                 background-size: cover;
                 height: 38vh;
                 margin-bottom: 5vh;
@@ -411,7 +411,7 @@
             }
 
             #box11 {
-                background-image: url('assets/images/bottom.png');
+                background-image: url('bottom.png');
                 background-size: cover;
                 height: 20vh;
             }
