--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@
 
         .maintext {
             font-size: 9vmin; /* Mobile default font size */
+            margin-right:1vw;
         }
 
         .pmaintext {
             font-size: 5vmin; /* Mobile default font size */
-            margin-right: 0;
+            margin-right: 1vw;
         }
 
         .tgcell, .tgclast {
