--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
         #box9 {
             background-position-x: -10px;
             height: 20vh;
-            background-image: url('rvbg.png');
+            background-image: url('../rvbg.png');
             background-size: cover;
         }
 
         #box11 {
             height: 15vh;
             text-align: center;
-            background-image: url('bottom.png');
+            background-image: url('../bottom.png');
             background-size: cover;
         }
 
@@ -166,7 +166,7 @@
             margin-left: 5vw;
             margin-right: 5vw;
             text-align: center;
-            background-image: url('regbg.jfif');
+            background-image: url('../regbg.jfif');
             background-size: cover;
             background-position: center bottom;
         }
@@ -382,7 +382,7 @@
                 margin-left: 17.5vw;
                 margin-right: 17.5vw;
                 text-align: center;
-                background-image: url('regbg.jfif');
+                background-image: url('../regbg.jfif');
                 background-size: cover;
                 background-position: center bottom;
             }
@@ -404,7 +404,7 @@
             }
 
             #box9 {
-                background-image: url('rvbg.png');
+                background-image: url('../rvbg.png');
                 background-size: cover;
                 height: 38vh;
                 margin-bottom: 5vh;
@@ -412,7 +412,7 @@
             }
 
             #box11 {
-                background-image: url('bottom.png');
+                background-image: url('../bottom.png');
                 background-size: cover;
                 height: 20vh;
             }
